--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=5000 
+PORT = 5000
 
-MONGO_URL = mongodb+srv://gregcm03:ShinMark@7377@cluster0.b9a6wve.mongodb.net/test
+MONGO_URL = mongodb+srv://gregcm03:shinmark@cluster0.b9a6wve.mongodb.net/test
